--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "vitepress dev",
-    "build": "node build/build.js && vitepress build",
-    "build:post": "node build/build.js",
+    "dev": "node scripts/build.js && vitepress dev",
+    "build": "node scripts/build.js && vitepress build",
+    "build:post": "node scripts/build.js",
     "preview": "vitepress preview"
   },
   "keywords": [],
